--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Project: Travel webpage</title>
+    <title>Project: personal webpage</title>
 </head>
 <body>
 
-<h1>Travel to Costa Rica</h1>
+<h1>Welcome to the website of Dr. Wasikul Islam</h1>
 
-<p>...and you'll get to see these beauties!</p>
-<img src="https://www.kasandbox.org/programming-images/animals/crocodiles.png" alt="Scary crocodiles" width="200"/>
+<p> Please visit : https://osuhep.okstate.edu/wasik </p>
+<img src=" " alt=" " width="200"/>
 </body>
 </html>
